Finished Header and migrate to Astro v3 for using images service

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
+
+import Header from '../components/Header.astro';
 ---
 
 <Layout title="Sabores Caffe">
-    <h1>Projecto con SASS</h1>
+    <Header headerImage="home"/>
 </Layout>
