--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,16 +2,17 @@
 $primaryFont: 'Roboto', sans-serif;
 
 /* Media Queries */
-$phoneMedia: 480px;
-$tabletMedia: 768px;
-$desktopMedia: 1024px;
+$phone: 480px;
+$tablet: 768px;
+$desktop: 1024px;
 
 /* Colors */
-$primary: #E8505B;
-$secondary: #455A64;
+$primary: #5E311E;
+$secondary: #C39C63;
 $black: #000000;
 $white: #FFFFFF;
 $lightGray: #ECEEEF;
+$lightBrown: #EBE7DE;
 
 /* Units */
 $separation: 5rem;
