--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,7 @@
 /* Fuentes */
-$primaryFont: 'Roboto', sans-serif;
+$primaryFont: 'Raleway', sans-serif;
+$secondaryFont: 'Roboto', sans-serif;
+$cursiveFont: 'Bona Nova', sans-serif;
 
 /* Media Queries */
 $phone: 480px;
