--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import homeAboutUsBackground from "../assets/img/header_nosotros.jpg";
 import homeProcessBackground from "../assets/img/header_proceso.jpg";
 
 interface Props {
-  headerImage: "home" | "contact" | "gallery" | "menu" | "aboutUs" | "process"
+  headerImage: "home" | "contact" | "gallery" | "menu" | "aboutUs" | "process";
 }
 
 const { headerImage } = Astro.props;
@@ -24,7 +24,7 @@ const headerImages = {
 }
 
 const headerImageOptimized = await getImage({ src: headerImages[headerImage], format: "webp", quality: "low" });
-const headerBackgroundImage = `url(${headerImageOptimized.src});`
+const headerBackgroundImage = `url(${headerImageOptimized.src})`;
 ---
 
 <header>
@@ -88,9 +88,14 @@ const headerBackgroundImage = `url(${headerImageOptimized.src});`
   }
 
   .header-container {
+    width: 95%;
+
     position: relative;
 
     h1 {
+      width: 95%;
+
+      margin-inline: auto;
       margin-top: 5rem;
 
       text-align: center;
@@ -128,7 +133,7 @@ const headerBackgroundImage = `url(${headerImageOptimized.src});`
     .nav {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 2rem;
 
       margin-top: 5rem;
 
