--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,3 +17,9 @@
     @content;
   }
 }
+
+@mixin responsiveGrid($columns, $gap) {
+  display: grid;
+  grid-template-columns: repeat($columns, 1fr);
+  gap: $gap;
+}
