--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,7 @@ const headerBackgroundImage = `url(${headerImageOptimized.src})`;
 
       <nav class="nav">
         <a href="/" class="active">Home</a>
-        <a href="about-us">About us</a>
+        <a href="/about-us">About us</a>
         <a href="/process">Process</a>
         <a href="/menu">Menu</a>
         <a href="/gallery">Gallery</a>
